# retail-floor-copilot

./: .env.example  .gitignore  Dockerfile.web  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: tests.yml
.streamlit/: config.toml  secrets.toml.example
app/: __init__.py  api.py  assistant.py  catalog.py  config.py  db.py  inventory.py  llm.py  logging_utils.py  retrieval.py  risk.py  schemas.py
artifacts/: verification_report.md
data/: barcodes.csv  customer_tags.csv  eval_cases.csv  interview_template.csv  inventory.csv  knowledge_docs.csv  product_recommendations.csv  products.csv  promotions.csv  question_bank.csv  research_findings.csv
docs/: 01_PRD.md  02_User_Research.md  03_Information_Architecture.md  04_Evaluation_Plan.md  05_Product_Overview.md  06_Data_Dictionary.md  07_Operations_Manual.md  08_Acceptance_Checklist.md  09_Deployment_Demo.md
scripts/: init_db.py  run_eval.py
tests/: test_api.py  test_catalog.py  test_experience_and_closure.py  test_inventory.py  test_management.py  test_retrieval.py  test_risk.py
ui/: streamlit_app.py
